added create page

--- a/src/index.html
+++ b/src/index.html
@@ -12,11 +12,15 @@
   <link rel="stylesheet" href="styles/main.css">
 </head>
 
-<body>
+<body layout-fill>
   <!--[if lt IE 7]>
             <p class="chromeframe">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">activate Google Chrome Frame</a> to improve your experience.</p>
     <![endif]-->
-  <ui-view></ui-view>
+
+  <ui-view layout-fill></ui-view>
+
+  <md-button style="position:fixed" class="md-warn md-fab md-raised md-fab-bottom-right" aria-label="add new section" ui-sref="home.create"><i class="mdi mdi-plus mdi-2x"></i>
+  </md-button>
 
   <script src="scripts/bundle.js"></script>
 </body>
